--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,6 +1,10 @@
 operator:
   - version: 0.20.0
     defaultKafkaVersion: 2.6.0
+    bridgeVersion: 0.19.0
+    oAuthVersion: 0.6.1
+    kafkaVersions: 2.5.0, 2.5.1, 2.6.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -8,6 +12,10 @@ operator:
     directory_layout: layout2
   - version: 0.19.0
     defaultKafkaVersion: 2.5.0
+    bridgeVersion: 0.18.0
+    oAuthVersion: 0.5.0
+    kafkaVersions: 2.4.0, 2.4.1, 2.5.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -15,6 +23,10 @@ operator:
     directory_layout: layout2
   - version: 0.18.0
     defaultKafkaVersion: 2.5.0
+    bridgeVersion: 0.16.0
+    oAuthVersion: 0.5.0
+    kafkaVersions: 2.4.0, 2.4.1, 2.5.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -22,6 +34,10 @@ operator:
     directory_layout: layout2
   - version: 0.17.0
     defaultKafkaVersion: 2.4.0
+    bridgeVersion: 0.15.2
+    oAuthVersion: 0.3.0
+    kafkaVersions: 2.3.1, 2.4.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -29,24 +45,40 @@ operator:
     directory_layout: layout1
   - version: 0.16.2
     defaultKafkaVersion: 2.4.0
+    bridgeVersion: 0.15.0
+    oAuthVersion: 0.2.0
+    kafkaVersions: 2.3.1, 2.4.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
     directory_layout: layout1
   - version: 0.16.1
     defaultKafkaVersion: 2.4.0
+    bridgeVersion: 0.15.0
+    oAuthVersion: 0.2.0
+    kafkaVersions: 2.3.1, 2.4.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
     directory_layout: layout1
   - version: 0.16.0
     defaultKafkaVersion: 2.4.0
+    bridgeVersion: 0.15.0
+    oAuthVersion: 0.2.0
+    kafkaVersions: 2.3.1, 2.4.0
+    kubernetesVersions: 1.11+
     overview_book: true
     quickstart_book: true
     using_book: true
     directory_layout: layout1
   - version: 0.15.0
     defaultKafkaVersion: 2.3.1
+    bridgeVersion: 0.15.0
+    oAuthVersion: 0.1.0
+    kafkaVersions: 2.2.1, 2.3.0, 2.3.1
+    kubernetesVersions: 1.11+
     overview_book: false
     quickstart_book: true
     using_book: true
@@ -54,6 +86,10 @@ operator:
     directory_layout: layout1
   - version: 0.14.0
     defaultKafkaVersion: 2.3.0
+    bridgeVersion: 0.14.0
+    oAuthVersion: 0.1.0
+    kafkaVersions: 2.1.0, 2.1.1, 2.2.0, 2.2.1, 2.3.0
+    kubernetesVersions: 1.11+
     overview_book: false
     quickstart_book: false
     using_book: true
@@ -61,6 +97,9 @@ operator:
     directory_layout: layout1
   - version: 0.13.0
     defaultKafkaVersion: 2.3.0
+    bridgeVersion: 0.13.0
+    kafkaVersions: 2.1.0, 2.1.1, 2.2.0, 2.2.1, 2.3.0
+    kubernetesVersions: 1.11+
     overview_book: false
     quickstart_book: false
     using_book: true
@@ -68,6 +107,9 @@ operator:
     directory_layout: layout1
   - version: 0.12.2
     defaultKafkaVersion: 2.2.1
+    bridgeVersion: 0.12.2
+    kafkaVersions: 2.1.0, 2.1.1, 2.2.0, 2.2.1
+    kubernetesVersions: 1.11+
     overview_book: false
     quickstart_book: false
     using_book: true
@@ -75,6 +117,9 @@ operator:
     directory_layout: layout1
   - version: 0.12.1
     defaultKafkaVersion: 2.2.1
+    bridgeVersion: 0.12.1
+    kafkaVersions: 2.1.0, 2.1.1, 2.2.0, 2.2.1
+    kubernetesVersions: 1.11+
     overview_book: false
     quickstart_book: false
     using_book: true
@@ -82,6 +127,9 @@ operator:
     directory_layout: layout1
   - version: 0.12.0
     defaultKafkaVersion: 2.2.1
+    bridgeVersion: 0.12.0
+    kafkaVersions: 2.1.0, 2.1.1, 2.2.0, 2.2.1
+    kubernetesVersions: 1.11+
     overview_book: false
     quickstart_book: false
     using_book: true
