--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,15 @@
 operator:
+  - version: 0.28.0
+    defaultKafkaVersion: 3.1.0
+    bridgeVersion: 0.21.4
+    oAuthVersion: 0.10.0
+    kafkaVersions: 3.0.0, 3.1.0
+    kubernetesVersions: 1.16+
+    overview_book: true
+    quickstart_book: true
+    configuring_book: true
+    deploying_book: true
+    directory_layout: layout3
   - version: 0.27.1
     defaultKafkaVersion: 3.0.0
     bridgeVersion: 0.21.3
