--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -406,6 +406,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.21.5
   - version: 0.21.4
   - version: 0.21.3
   - version: 0.21.2
