--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,34 @@ apiVersion: v1
 entries:
   strimzi-kafka-operator:
   - apiVersion: v2
+    appVersion: 0.29.0
+    created: "2022-05-15T15:56:46.900078+02:00"
+    description: 'Strimzi: Apache Kafka running on Kubernetes'
+    digest: 92e3dc4997ead8f86462480ec8bb2ebc67f38f43e68b15d75607f2b6d4c178c0
+    home: https://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/main/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: Frawless
+    - name: ppatierno
+    - name: samuel-hawker
+    - name: scholzj
+    - name: tombentley
+    - name: sknot-rh
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.29.0/strimzi-kafka-operator-helm-3-chart-0.29.0.tgz
+    version: 0.29.0
+  - apiVersion: v2
     appVersion: 0.28.0
     created: "2022-02-10T18:56:27.752061+01:00"
     description: 'Strimzi: Apache Kafka running on Kubernetes'
@@ -993,4 +1021,4 @@ entries:
     urls:
     - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.6.0/strimzi-kafka-operator-0.6.0.tgz
     version: 0.6.0
-generated: "2022-02-10T18:56:27.743563+01:00"
+generated: "2022-05-15T15:56:46.88597+02:00"
