--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,4 +1,7 @@
 strimzi_presentations:
+ - name: Road to KRaft - ZooKeeper-less Kafka in Strimzi 0.29.0
+   info: YouTube video
+   video_url: https://youtu.be/mT7dbLNCGtQ
  - name: StrimziPodSets - What it is and why should you care?
    info: YouTube video
    video_url: https://youtu.be/iSwrn1Gumx4
