--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -16,6 +16,7 @@ operator:
     oAuthVersion: 0.10.0
     kafkaVersions: 3.0.0, 3.1.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     configuring_book: true
@@ -27,6 +28,7 @@ operator:
     oAuthVersion: 0.9.0
     kafkaVersions: 2.8.0, 2.8.1, 3.0.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -38,6 +40,7 @@ operator:
     oAuthVersion: 0.9.0
     kafkaVersions: 2.8.0, 2.8.1, 3.0.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -49,6 +52,7 @@ operator:
     oAuthVersion: 0.9.0
     kafkaVersions: 2.8.0, 2.8.1, 3.0.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -60,6 +64,7 @@ operator:
     oAuthVersion: 0.9.0
     kafkaVersions: 2.8.0, 2.8.1, 3.0.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -71,6 +76,7 @@ operator:
     oAuthVersion: 0.8.1
     kafkaVersions: 2.7.0, 2.7.1, 2.8.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -82,6 +88,7 @@ operator:
     oAuthVersion: 0.8.1
     kafkaVersions: 2.7.0, 2.7.1, 2.8.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
@@ -93,6 +100,7 @@ operator:
     oAuthVersion: 0.7.2
     kafkaVersions: 2.6.0, 2.6.1, 2.6.2, 2.7.0, 2.8.0
     kubernetesVersions: 1.16+
+    usesPdbV1beta1: true
     overview_book: true
     quickstart_book: true
     using_book: true
