--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -425,6 +425,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.21.6
   - version: 0.21.5
   - version: 0.21.4
   - version: 0.21.3
